--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
 </head>
 <body>
 
+  <table style="border: none;">
+  <tr>
+    <td style="border: none;">
+      <img src="image/RoelandC.png" alt="Roeland Cerfonteijn" width="150"/>
+    </td>
+    <td style="border: none;">
+      <strong>Roeland Cerfonteijn</strong><br>
+      Engineer, Microsoft 365<br>
+      Azure Identity, Security, Purview, Intune<br>
+      <a href="mailto:RoelandC@hotmail.com">Email</a> |
+      <a href="https://www.linkedin.com/in/roelandcerfonteijn">LinkedIn</a> |
+      <a href="https://github.com/NL12143">GitHub</a>
+    </td>
+  </tr>
+</table>
+
   <h1>Roeland Cerfonteijn</h1>
   <p>Email: RoelandC@hotmail.com | <a href="#">LinkedIn</a></p>
 
@@ -56,7 +72,7 @@
   <div class="section">
     <h2>Work Experience</h2>
 
-    <h3>InFRABEL NV, Brussels (Aug 2024 – Aug 2025)</h3>
+    <h3>INFRABEL NV, Brussels (Aug 2024 – Aug 2025)</h3>
     <p><strong>Role:</strong> SharePoint Analyst Consultant</p>
     <ul>
       <li>Central contact for SharePoint/Teams</li>
@@ -68,8 +84,15 @@
     <h3>SHARETWO BV, Sittard (Aug 2015 – Aug 2024)</h3>
     <p><strong>Role:</strong> Power Platform Scout</p>
     <ul>
-      <li>Projects for Eurocontrol, Rijkswaterstaat, Provincie Limburg, De Nederlandsche Bank</li>
-      <li>SharePoint and Power Platform integrations</li>
+    <li>
+    Various projects for large customers:
+      <ul>
+        <li>Eurocontrol</li>
+        <li>Rijkswaterstaat</li>
+        <li>Provincie Limburg</li>
+        <li>De Nederlandsche Bank</li>
+      </ul>
+    </li>
     </ul>
 
     <h3>ATOS, Eindhoven (Dec 1999 – Oct 2014)</h3>
