--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Roeland Cerfonteijn - Resume</title>
+  <title>RoelandC</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; }
     h1, h2, h3 { color: #2c3e50; }
@@ -12,6 +12,28 @@
 </head>
 <body>
 
+# Curriculum Roeland C
+<i>A resume of my knowledge and experiences</i>
+
+<table style="border: none;">
+  <tr>
+    <td style="border: none;">
+      <img src="image/RoelandC.png" alt="Roeland Cerfonteijn" width="150"/>
+    </td>
+    <td style="border: none;">
+      <strong>Roeland Cerfonteijn</strong><br>
+      Engineer, Microsoft 365, Azure<br>
+      <i>Identity, Security, Purview, Intune</i><br>
+      <a href="mailto:RoelandC@hotmail.com">Email</a> |
+      <a href="https://www.linkedin.com/in/roelandcerfonteijn">LinkedIn</a> |
+      <a href="https://github.com/NL12143">GitHub</a>
+    </td>
+  </tr>
+</table>
+
+<br><br>
+<br><br>
+  
   <table style="border: none;">
   <tr>
     <td style="border: none;">
