--- a/index.html
+++ b/index.html
@@ -34,22 +34,6 @@
 <br><br>
 <br><br>
   
-  <table style="border: none;">
-  <tr>
-    <td style="border: none;">
-      <img src="image/RoelandC.png" alt="Roeland Cerfonteijn" width="150"/>
-    </td>
-    <td style="border: none;">
-      <strong>Roeland Cerfonteijn</strong><br>
-      Engineer, Microsoft 365<br>
-      Azure Identity, Security, Purview, Intune<br>
-      <a href="mailto:RoelandC@hotmail.com">Email</a> |
-      <a href="https://www.linkedin.com/in/roelandcerfonteijn">LinkedIn</a> |
-      <a href="https://github.com/NL12143">GitHub</a>
-    </td>
-  </tr>
-</table>
-
   <h1>Roeland Cerfonteijn</h1>
   <p>Email: RoelandC@hotmail.com | <a href="#">LinkedIn</a></p>
 
@@ -70,6 +54,8 @@
     <p>Experienced in agile sprints using Azure DevOps. Advocates for collaboration and knowledge sharing with business users and operational staff.</p>
   </div>
 
+  <br><br>
+
   <div class="section">
     <h2>Technical Skills</h2>
     <ul>
@@ -79,6 +65,8 @@
       <li><strong>Windows & Intune:</strong> RegEdit, OOBE, Citrix VDI, AD/AAD join, MDM config</li>
     </ul>
   </div>
+
+  <br><br>
 
   <div class="section">
     <h2>Training & Certifications</h2>
@@ -91,8 +79,10 @@
     </ul>
   </div>
 
+ <br><br>
+ 
   <div class="section">
-    <h2>Work Experience</h2>
+    <h2>Projects Experience</h2>
 
     <h3>INFRABEL NV, Brussels (Aug 2024 – Aug 2025)</h3>
     <p><strong>Role:</strong> SharePoint Analyst Consultant</p>
