--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-# Curriculum Roeland C
+# Curriculum Roeland C <BR>
 <i>A resume of my knowledge and experiences</i>
-
+<BR>
 <table style="border: none;">
   <tr>
     <td style="border: none;">
@@ -31,8 +31,7 @@
   </tr>
 </table>
 
-<br><br>
-<br><br>
+  <br>
   
   <h1>Roeland Cerfonteijn</h1>
   <p>Email: RoelandC@hotmail.com | <a href="#">LinkedIn</a></p>
@@ -54,7 +53,7 @@
     <p>Experienced in agile sprints using Azure DevOps. Advocates for collaboration and knowledge sharing with business users and operational staff.</p>
   </div>
 
-  <br><br>
+  <br>
 
   <div class="section">
     <h2>Technical Skills</h2>
@@ -83,7 +82,7 @@
  
   <div class="section">
     <h2>Projects Experience</h2>
-
+<br>
     <h3>INFRABEL NV, Brussels (Aug 2024 – Aug 2025)</h3>
     <p><strong>Role:</strong> SharePoint Analyst Consultant</p>
     <ul>
@@ -92,7 +91,7 @@
       <li>Business requirement analysis and Proof of Concept setup</li>
       <li>Flow automation for file tagging based on folder names</li>
     </ul>
-
+  <br>
     <h3>SHARETWO BV, Sittard (Aug 2015 – Aug 2024)</h3>
     <p><strong>Role:</strong> Power Platform Scout</p>
     <ul>
@@ -106,14 +105,14 @@
       </ul>
     </li>
     </ul>
-
+  <br>
     <h3>ATOS, Eindhoven (Dec 1999 – Oct 2014)</h3>
     <p><strong>Role:</strong> Engineer/Consultant Microsoft Technologies</p>
     <ul>
       <li>SharePoint farm design and support for clients like KLM, NXP, ING, Philips</li>
       <li>Migration lead for Eurocontrol</li>
     </ul>
-
+  <br>
     <h3>Electrical Engineer (May 1990 – Dec 1999)</h3>
     <p><strong>Role:</strong> Electrical Engineer</p>
     <ul>
