--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
     </ul>
   </div>
 
-  <div class="section">
-    <h2>Profile</h2>
-    <p>Expert in Microsoft technologies with extensive experience in both on-premises and online environments. Specialized in SharePoint, Power Platform, Azure, and Microsoft 365. Skilled in document management systems (DMS, ISMS, DQS) and security frameworks like ISO 27001 and NIS2. Passionate about Infrastructure-as-Code using MS365DSC and CIS.</p>
-    <p>Experienced in server/network setups, certificates, reverse proxies (F5/Citrix), and large migrations using ShareGate and PowerShell. Proficient in PowerShell modules including PNP.PowerShell and Microsoft365DSC. Familiar with Azure DevOps, app registrations, and service principals.</p>
-    <p>Continuous learner in cloud services (Azure IaaS/PaaS), Agile, DevOps, MS365, Power Platform, and Power BI. Hands-on with canvas and model-driven apps, flows, virtual agents, dataflows, logic apps, and AI-based connectors.</p>
-    <p>Experienced in agile sprints using Azure DevOps. Advocates for collaboration and knowledge sharing with business users and operational staff.</p>
-  </div>
+<details class="section">
+  <summary><h2>Technical Skills</h2></summary>
+  <ul>
+    <li><strong>SharePoint:</strong> FarmAdmin, servers, VMware, firewalls, networks, NTLM/Kerberos, DMS, ISMS, DQS</li>
+    <li><strong>Power Platform:</strong> Canvas apps, model-driven apps, Dataverse, Flow, REST, GraphAPI</li>
+    <li><strong>PowerShell:</strong> Scripts, PNP.PowerShell, Az, AzureAD, Graph, AppReg/cert</li>
+    <li><strong>Windows & Intune:</strong> RegEdit, OOBE, Citrix VDI, AD/AAD join, MDM config</li>
+  </ul>
+</details>
 
   <br>
 
