--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-# Curriculum Roeland C <BR>
+Curriculum Roeland C <BR>
 <i>A resume of my knowledge and experiences</i>
 <BR>
 <table style="border: none;">
@@ -46,7 +46,7 @@
   </div>
 
 <details class="section">
-  <summary><h2>Technical Skills</h2></summary>
+<summary><strong>Technical Skills</strong></summary>
   <ul>
     <li><strong>SharePoint:</strong> FarmAdmin, servers, VMware, firewalls, networks, NTLM/Kerberos, DMS, ISMS, DQS</li>
     <li><strong>Power Platform:</strong> Canvas apps, model-driven apps, Dataverse, Flow, REST, GraphAPI</li>
