--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Curriculum Roeland C <BR>
   </div>
 
   <details class="section">
-  <summary><strong>Technical Skills</strong></summary>
+  <summary><strong>Technical Skills </strong></summary>
     <ul>
       <li><strong>SharePoint:</strong> FarmAdmin, servers, VMware, firewalls, networks, NTLM/Kerberos, DMS, ISMS, DQS</li>
       <li><strong>Power Platform:</strong> Canvas apps, model-driven apps, Dataverse, Flow, REST, GraphAPI</li>
@@ -54,23 +54,9 @@ Curriculum Roeland C <BR>
       <li><strong>Windows & Intune:</strong> RegEdit, OOBE, Citrix VDI, AD/AAD join, MDM config</li>
     </ul>
   </details>
-
   <br>
-
-  <div class="section">
-    <h2>Technical Skills</h2>
-    <ul>
-      <li><strong>SharePoint:</strong> FarmAdmin, servers, VMware, firewalls, networks, NTLM/Kerberos, DMS, ISMS, DQS</li>
-      <li><strong>Power Platform:</strong> Canvas apps, model-driven apps, Dataverse, Flow, REST, GraphAPI</li>
-      <li><strong>PowerShell:</strong> Scripts, PNP.PowerShell, Az, AzureAD, Graph, AppReg/cert</li>
-      <li><strong>Windows & Intune:</strong> RegEdit, OOBE, Citrix VDI, AD/AAD join, MDM config</li>
-    </ul>
-  </div>
-
-  <br><br>
-
-  <div class="section">
-    <h2>Training & Certifications</h2>
+  <details class="section">
+  <summary><strong>Training & Certifications </strong></summary>
     <ul>
       <li>Microsoft Virtual Training Days: Azure AVD, M365 Security, Teams</li>
       <li>AZ-104, AZ-900, AZ-400 (in progress)</li>
@@ -78,13 +64,13 @@ Curriculum Roeland C <BR>
       <li>SharePoint Administrator: 2010 (SP-668), 2013 (70-331, 70-332)</li>
       <li>Events: Ignite The Tour (Amsterdam 2018, Milan 2020), CollabDays, European Collaboration Summit</li>
     </ul>
-  </div>
+  </details>
+  <br>
 
- <br><br>
- 
-  <div class="section">
-    <h2>Projects Experience</h2>
-<br>
+  <details class="section">
+  <summary><strong>Projects Experience< </strong></summary>
+    <ul>
+  <br> 
     <h3>INFRABEL NV, Brussels (Aug 2024 – Aug 2025)</h3>
     <p><strong>Role:</strong> SharePoint Analyst Consultant</p>
     <ul>
