--- a/index.html
+++ b/index.html
@@ -23,22 +23,17 @@ Curriculum Roeland C <BR>
     <td style="border: none;">
       <strong>Roeland Cerfonteijn</strong><br>
       Engineer, Microsoft 365, Azure<br>
-      <i>Identity, Security, Purview, Intune</i><br>
+      <i>Identity, Security, Purview, Intune</i><br><br>
       <a href="mailto:RoelandC@hotmail.com">Email</a> |
       <a href="https://www.linkedin.com/in/roelandcerfonteijn">LinkedIn</a> |
       <a href="https://github.com/NL12143">GitHub</a>
     </td>
   </tr>
 </table>
-
-  <br>
-  
-  <h1>Roeland Cerfonteijn</h1>
-  <p>Email: RoelandC@hotmail.com | <a href="#">LinkedIn</a></p>
-
-  <div class="section">
-    <h2>Personal Data</h2>
-    <ul>
+<br>
+  <details class="section">
+  <summary><strong>Personal Data </strong></summary>
+    <ul>      
       <li>Nationality: Dutch</li>
       <li>Rate: €90/hour</li>
       <li>Location: Velperbroek</li>
