--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Curriculum Roeland C <BR>
 </table>
 <br>
 
-  <details class="section">
+  <details open class="section">
   <summary><strong>Personal Data </strong></summary>
     <ul>      
       <li>Nationality: Dutch</li>
@@ -41,7 +41,7 @@ Curriculum Roeland C <BR>
     </ul>
   </div>
 
-  <details class="section">
+  <details open class="section">
   <summary><strong>Technical Skills </strong></summary>
     <ul>
       <li><strong>SharePoint:</strong> FarmAdmin, servers, VMware, firewalls, networks, NTLM/Kerberos, DMS, ISMS, DQS</li>
@@ -51,7 +51,7 @@ Curriculum Roeland C <BR>
     </ul>
   </details>
   <br>
-  <details class="section">
+  <details open class="section">
   <summary><strong>Training & Certifications </strong></summary>
     <ul>
       <li>Microsoft Virtual Training Days: Azure AVD, M365 Security, Teams</li>
@@ -63,7 +63,7 @@ Curriculum Roeland C <BR>
   </details>
   <br>
   <details class="section">
-  <summary><strong>Projects Experience< </strong></summary>
+  <summary><strong>Projects Experience </strong></summary>
     <ul>
   <br> 
     <h3>INFRABEL NV, Brussels (Aug 2024 – Aug 2025)</h3>
